--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.40.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -43,6 +44,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "react-datetime-picker": "^3.5.0",
+    "react-modal": "^3.14.4",
     "tailwindcss": "^3.0.23"
   }
 }
