--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.12",
     "react-datetime-picker": "^3.5.0",
     "react-modal": "^3.14.4",
+    "sweetalert2": "^11.4.7",
     "tailwindcss": "^3.0.23"
   }
 }
