--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-big-calendar": "^0.40.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
