--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "calendar-app",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node":"16.x",
+    "npm":"8.x"
+  },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
